# aeron_udp_microservices

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RunMediaDriver.java  readme.md
RustExamples/: Cargo.toml
RustExamples/src/: basic_publisher.rs  basic_publisher_flatb.rs  basic_subscriber.rs  basic_subscriber_flatb.rs
RustMicroservicesProject/src/: rustconsumer.rs
cpp/: CMakeLists.txt  README.md  RunMediaDriver.java
cpp/include/: AeronConf.hpp  AeronConsumer.hpp  AeronProducer.hpp  Configuration.hpp  EmbeddedAeronMediaDriver.hpp  KafkaProducer.hpp  SPSCQueue.hpp  streamIDmap.hpp
cpp/include/configs/: AeronConf.hpp  KafkaConf.hpp
cpp/include/flatbuffers/: TradeEvent_generated.h
cpp/schema/: TradeEvent.fbs
cpp/src/: CMakeLists.txt  main.cpp
cpp/src/aeron/: BasicPublisher.cpp  BasicSubscriber.cpp  mediadriverworkaround.cpp
cpp/src/kafka/: BasicConsumer.cpp  BasicProducer.cpp  consumer.cpp
src/: BasicSubscriber.cpp  main.cpp
